added lotDetails service
