# src/product/product.routes.js
@@ -1,8 +1,11 @@
 const router = require('express').Router();
-const controller = require('./product.controller');
+const productsController = require('./product.controller');
+const lotDetailsController = require('./lotDetails.controller');
 
-router.get("/product/:id", controller.getById);
-router.get("/products", controller.getAll);
-router.post("/products", controller.create);
+router.get("/products/product/:id", productsController.getById);
+router.get("/products/products", productsController.getAll);
+router.post("/products/products", productsController.create);
+
+router.get("/lotDetails/display_lot_summary", lotDetailsController.getById);
 
 module.exports = router;
